--- a/index.html
+++ b/index.html
@@ -4,23 +4,22 @@
     <meta charset="utf-8">
     <title>9x9</title>
     <link rel="stylesheet" href="style.css">
-    <!-- <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@48,400,0,0" /> -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   </head>
   <body>
-  <div class="wrapper">
+  <header>
+    <h1>むげん九九</h1>
+  </header>
+  <main>
     <div class="formula">
       <span id="factor1"></span>
-      x
+      ×
       <span id="factor2"></span>
       =
       <span id="answer"></span>
     </div>
-    <div class="buttonContainer">
-      <button id="buttonNewQuestion" class="" onclick="newQuestion();">つぎへ</button>
-      <button id="buttonShowAnswer" class="hidden" onclick="showAnswer();">こたえ</button>
-    </div>
-  </div>
+    <button id="buttonNewQuestion" class="" onclick="newQuestion();">つぎへ</button>
+    <button id="buttonShowAnswer" class="hidden" onclick="showAnswer();">こたえ</button>
+  </main> 
   <script src="script.js"></script>
   </body>
 </html>
