--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html lang="ja">
   <head>
     <meta charset="utf-8">
-    <title>9x9</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>むげん九九</title>
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
