JSの処理をscript.jsファイルに集約
- HTMLファイルの方から onclick=hoge を削除
- JSファイルにイベントリスナーを設置

--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
       =
       <span id="answer"></span>
     </div>
-    <button id="buttonNewQuestion" class="" onclick="newQuestion();">つぎへ</button>
-    <button id="buttonShowAnswer" class="hidden" onclick="showAnswer();">こたえ</button>
+    <button id="buttonNewQuestion" class="">つぎへ</button>
+    <button id="buttonShowAnswer" class="hidden">こたえ</button>
   </main> 
   <script src="script.js"></script>
   </body>
